tc-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tc-route
  namespace: ai4ba
  labels:
    app: tc-service
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: tc-service
    weight: 100
  port:
    targetPort: tc-service-p
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
